# Copy-Trading-Bot-Polymarket

./: .env.backup  .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: COMMAND_REFERENCE.md  EXAMPLES.md  GETTING_STARTED.md  STRATEGY.md
src/: __init__.py  lib_core.py  main.py
src/config/: __init__.py  copy_strategy.py  db.py  env.py
src/interfaces/: __init__.py  user.py
src/models/: __init__.py  user_history.py
src/scripts/: __init__.py  __main__.py
src/scripts/position/: __init__.py  close_resolved_positions.py  close_stale_positions.py  manual_sell.py  redeem_resolved_positions.py  sell_large_positions.py
src/scripts/research/: __init__.py  find_best_traders.py  find_low_risk_traders.py  scan_best_traders.py  scan_traders_from_markets.py
src/scripts/setup/: __init__.py  help.py  setup.py  system_status.py
src/scripts/simulation/: __init__.py  aggregate_results.py  audit_copy_trading.py  compare_results.py  fetch_historical_trades.py  run_simulations.py  simulate_profitability.py  simulate_profitability_old.py
src/scripts/wallet/: __init__.py  check_allowance.py  check_both_wallets.py  check_my_stats.py  check_pnl_discrepancy.py  check_positions_detailed.py  check_proxy_wallet.py  check_recent_activity.py  find_gnosis_safe_proxy.py  find_my_eoa.py  set_token_allowance.py  (+1 more)
src/services/: __init__.py  trade_executor.py  trade_monitor.py
src/utils/: __init__.py  __main__.py  create_clob_client.py  fetch_data.py  get_my_balance.py  logger.py  post_order.py  system_status.py
strategy_factory_results/: aggregated_results.json
